# github-radar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  radar.toml
.github/workflows/: build-windows-reader.yml
archive/h5/: README.md  export-web-json.ps1  web_export.py
archive/h5/web/: reader.html
github_radar/: __init__.py  cli.py  db.py  github_api.py  gui.py  models.py  profile.py  reader_app.py  report.py  scorer.py  settings.py  summarizer.py
scripts/: build-reader-exe.ps1  install-windows-task.ps1  reader_launcher.py  run-radar.ps1  run-reader.ps1
