[project]
name = "github-radar"
version = "0.1.0"
description = "Personal GitHub hot project radar with feedback learning and Markdown reports."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
]

[project.scripts]
github-radar = "github_radar.cli:main"
github-radar-reader = "github_radar.gui:main"

[tool.github-radar]
package = "github_radar"
