[project]
name = "github-radar"
version = "1.0.1"
description = "Personal GitHub hot project radar with a local desktop reader, feedback learning, tags, and Markdown reports."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
]

[project.scripts]
github-radar = "github_radar.cli:main"
github-radar-reader = "github_radar.gui:main"

[tool.github-radar]
package = "github_radar"
